--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,23 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "Bianca Kendall",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
+    "@types/mongoose": "^5.11.97",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0"
   }
 }
