--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.0"
