--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,16 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/node-cron": "^3.0.8",
+    "@types/node-schedule": "^2.1.0",
+    "@types/redis": "^4.0.11",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
+    "redis": "^4.6.7",
+    "redis-server": "^1.2.2"
   }
 }
