--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "mongoose": "^7.3.3",
     "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
